[metadata]
name = cerberus
version = 0.0.1
summary = Proactive layer 2 Openflow Controller
author = Christoff Visser
author-email = christoff@iij.ad.jp
platform = any

[files]
packages = cerberus
data_files =
    etc/cerberus =
        etc/cerberus/topology.json
        etc/cerberus/umbrella.json

[entry_points]
console_scripts =
    cerberus = cerberus.__main__:main